--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>nice template</title>
     <link href="./styles/tailwind.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
